Bug 701894: fix the '--' and co options

The --, -+ and -@ need to add the file argument to the permit read list
before attempting to open and interpret them.